--- a/index.html
+++ b/index.html
@@ -1,52 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Travel</title>
-    <link rel="stylesheet" href="./css/style.css" />
-   
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <div id="container">
-      <img src="./images/hero1.jpg" alt="background" />
-      <!-- //------------------------------------------*********************----------------------------------------------- -->
-      <div class="hero" id="home">
-        <div class="nav-bar">
-          <div class="nav-logo">
-            <!-- <img src="" alt="" /> -->
-            <span>LOGO</span>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Travel</title>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/mediaQuery/style.css">
+</head>
 
-          <div class="nav-items">
-            <ul>
-              <li><a href="#home">Equipment</a></li>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#blog">Blogs</a></li>
-            </ul>
-          </div>
-
-          <div class="nav-links">
-            <li><a href="#contact">Contact</a></li>
-          </div>
+<body>
+  <div id="container">
+    <img src="./images/hero1.jpg" alt="background" width="1024px" height="1020" />
+    <!-- //------------------------------------------*********************----------------------------------------------- -->
+    <div class="hero" id="home">
+      <div class="nav-bar fixed">
+        <div class="nav-logo">
+          <!-- <img src="" alt="" /> -->
+          <span>LOGO</span>
         </div>
-        
+
+        <div class="nav-items " id="nav-item">
+          <ul>
+            <li><a href="#home">Equipment</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#blog">Blogs</a></li>
+          </ul>
+        </div>
+
+        <div class="nav-links ">
+          <li><a href="#contact">Contact</a></li>
+        </div>
+
+
+        <section class="top-nav">
+
+          <input id="menu-toggle" type="checkbox" />
+          <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'></div>
+            <!-- <button class="hamburger-menu"
+              onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
+              aria-label="menu">
+              <svg width="100" height="100" viewBox="0 0 100 100">
+                <path class="line line1"
+                  d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
+                <path class="line line2" d="M 20,50 H 80" />
+                <path class="line line3"
+                  d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+              </svg>
+            </button> -->
+          </label>
+          <ul class="menu">
+            <li><a href="#home">Equipment</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#blog">Blogs</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       </div>
-      <!-- //------------------------------------------*********************----------------------------------------------- -->
-      <!-- //------------------------------------------*********************----------------------------------------------- -->
-      <div class="about"></div>
-      <!-- //------------------------------------------*********************----------------------------------------------- -->
-      <!-- //------------------------------------------*********************----------------------------------------------- -->
-      <div class="service"></div>
-      <!-- //------------------------------------------*********************----------------------------------------------- -->
-      <!-- //------------------------------------------*********************----------------------------------------------- -->
-      <div class="footer"></div>
+
+
+
+
     </div>
-  </body>
+    <!-- //------------------------------------------*********************----------------------------------------------- -->
+    <!-- //------------------------------------------*********************----------------------------------------------- -->
+    <div class="about"></div>
+    <!-- //------------------------------------------*********************----------------------------------------------- -->
+    <!-- //------------------------------------------*********************----------------------------------------------- -->
+    <div class="service"></div>
+    <!-- //------------------------------------------*********************----------------------------------------------- -->
+    <!-- //------------------------------------------*********************----------------------------------------------- -->
+    <div class="footer"></div>
+  </div>
+  <script src="./js/app.js"></script>
+</body>
+
 </html>
