--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./css/mediaQuery/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
@@ -16,6 +17,7 @@
     <img src="./images/hero1.jpg" alt="background" width="1024px" height="1020" />
     <!-- //------------------------------------------*********************----------------------------------------------- -->
     <div class="hero" id="home">
+      <!-- -------------------------------------------------Navbar----------------------- -->
       <div class="nav-bar fixed">
         <div class="nav-logo">
           <!-- <img src="" alt="" /> -->
@@ -75,22 +77,41 @@
 
 
       </div>
-
+      <!-- -------------------------------------------------Hero content----------------------- -->
+      <div class="hero-content">
+        <div class="social-links">
+          <ul>
+            <li>Follow Us</li>
+            <li><i class="fa-brands fa-linkedin" style="color: #0d0d0d;"></i></li>
+            <li><i class="fa-brands fa-square-twitter"></i></li>
+            <li><i class="fa-brands fa-github"></i></li>
+          </ul>
+        </div>
+        <div class="hero-text"></div>
+        <div class="date"></div>
+      </div>
 
 
 
     </div>
     <!-- //------------------------------------------*********************----------------------------------------------- -->
     <!-- //------------------------------------------*********************----------------------------------------------- -->
-    <div class="about"></div>
+    <div class="about">
+      <h1>About</h1>
+    </div>
     <!-- //------------------------------------------*********************----------------------------------------------- -->
     <!-- //------------------------------------------*********************----------------------------------------------- -->
-    <div class="service"></div>
+    <div class="service">
+      <h1>service</h1>
+    </div>
     <!-- //------------------------------------------*********************----------------------------------------------- -->
     <!-- //------------------------------------------*********************----------------------------------------------- -->
-    <div class="footer"></div>
+    <div class="footer">
+      <h1>footer</h1>
+    </div>
   </div>
   <script src="./js/app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
 </body>
 
 </html>
