modified hero content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- //------------------------------------------*********************----------------------------------------------- -->
     <div class="hero" id="home">
       <!-- -------------------------------------------------Navbar----------------------- -->
-      <div class="nav-bar fixed">
+      <div class="nav-bar ">
         <div class="nav-logo">
           <!-- <img src="" alt="" /> -->
           <span>LOGO</span>
@@ -79,23 +79,30 @@
       </div>
       <!-- -------------------------------------------------Hero content----------------------- -->
       <div class="hero-content">
-        <div class="social-links">
+        <div class="social-links ">
           <ul>
-            <li>Follow Us</li>
-            <li><i class="fa-brands fa-linkedin" style="color: #0d0d0d;"></i></li>
+            <!-- <li class="rotate-y">Follow Us</li> -->
+            <li><i class="fa-brands fa-linkedin"></i></li>
             <li><i class="fa-brands fa-square-twitter"></i></li>
             <li><i class="fa-brands fa-github"></i></li>
           </ul>
         </div>
-        <div class="hero-text"></div>
-        <div class="date"></div>
+        <div class="hero-text">
+
+          <h5> <span></span>A HIKING GUIDE</h5>
+          <h1>Be Prepared For Mountains And Beyond!</h1>
+          <h4>Scroll Down <span></span></h4>
+        </div>
+        <div class="date">
+          <p id="date"></p>
+        </div>
       </div>
 
 
 
     </div>
-    <!-- //------------------------------------------*********************----------------------------------------------- -->
-    <!-- //------------------------------------------*********************----------------------------------------------- -->
+    <!-- ------------------------------------------*********************----------------------------------------------- -->
+    <!-- ------------------------------------------*********************----------------------------------------------- -->
     <div class="about">
       <h1>About</h1>
     </div>
