--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
           <h1>Be Prepared For The <br> <span>Mountains</span> And <span>Beyond!</span></h1>
           <h4>Scroll Down <span></span></h4>
         </div>
-        <div class="date">
+        <!-- <div class="new-date">
           <p id="date"></p>
-        </div>
+        </div> -->
       </div>
 
 
